syntax = "proto3";

option java_package = "grpc.smartsafety";
option java_multiple_files = true;
option java_outer_classname = "SmartSafetyImpl";



service smartSafety {

	//unary
	rpc SmartLock (lockRequest) returns (lockResponse) {}

	//unary
	rpc SmartLight (lightRequest) returns (lightResponse){}

}

message lockRequest {
	string lock = 1 ;

}

message lockResponse {
	string unlock = 1 ;
}

message lightRequest {
	string lightOn = 1;

}

message lightResponse{
	string lightOff = 1;

}